<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/title" />

            <SeekBar
                android:id="@+id/activity_setting_title_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/author" />

            <SeekBar
                android:id="@+id/activity_setting_author_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/content" />

            <SeekBar
                android:id="@+id/activity_setting_content_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="15" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_setting_title_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/setting_title_exmple" />

        <TextView
            android:id="@+id/activity_setting_author_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/setting_author_exmple" />

        <TextView
            android:id="@+id/activity_setting_content_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/setting_content_exmple" />
    </LinearLayout>

</ScrollView>