<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cesar="http://schemas.android.com/apk/res/com.example.poem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.cesar.poem.activity.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/activity_main_pager"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/main_activity_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/greybrown"
        android:orientation="horizontal" >
        <com.cesar.poem.view.IconView
            android:id="@+id/lastet_poem_fragment_IconView"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            cesar:icon="@drawable/ic_action_chat"
            cesar:text="@string/lastest_poem"
            cesar:text_size="12sp"
            cesar:color="#ff45c01a" />
        <com.cesar.poem.view.IconView
            android:id="@+id/classfy_fragment_IconView"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            cesar:icon="@drawable/ic_action_group"
            cesar:text="@string/classfy"
            cesar:text_size="12sp"
            cesar:color="#ff45c01a" />
        <com.cesar.poem.view.IconView
            android:id="@+id/mine_fragment_IconView"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            cesar:icon="@drawable/ic_action_person"
            cesar:text="@string/mine"
            cesar:text_size="12sp"
            cesar:color="#ff45c01a" />
    </LinearLayout>

</LinearLayout>